--- a/src/main/resources/templates/vsat-map.html
+++ b/src/main/resources/templates/vsat-map.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Carte Vsat - Application Materiel</title>
+    <title>Carte Viasat - Application Materiel</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -43,11 +43,11 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>Carte Vsat</h1>
+        <h1>Carte Viasat</h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Acceuil</a></li>
-                <li class="breadcrumb-item active">Carte Vsat</li>
+                <li class="breadcrumb-item active">Carte Viasat</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -57,6 +57,9 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-body">
+                        <div class="container mt-5">
+
+                        </div>
                         <div id="map" style="width: 100%; height: 600px;"></div>
                         <script th:inline="javascript">
 
