--- a/src/main/resources/templates/vsat-map.html
+++ b/src/main/resources/templates/vsat-map.html
@@ -25,8 +25,9 @@
     <link href="/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
     <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="/assets/vendor/simple-datatables/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+    <link rel="stylesheet" href="/assets/css/leaflet.css" />
+    <script src="/assets/js/leaflet.js"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/shapefile@0.6.6/dist/shapefile.min.js"></script>-->
     <!-- Template Main CSS File -->
     <link href="/assets/css/style.css" rel="stylesheet">
 
@@ -69,7 +70,7 @@
 
                             const map = L.map('map').setView([33, -3], 6);
 
-                            const streetMap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                           /* const streetMap = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
                                 maxZoom: 18,
                                 attribution: '© OpenStreetMap contributors',
                             });
@@ -77,18 +78,43 @@
                             const satelliteMap = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
                                 attribution: 'Tiles © Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community',
                                 maxZoom: 20,
+                            });*/
+
+
+                            const localTileLayer = L.tileLayer('http://localhost:8080/{z}/{x}/{y}.png', {
+                                maxZoom: 18,
+                                attribution: 'Local Map Tiles',
                             });
 
+                            /*
+                            fetch('http://localhost:8080/FRONTIERE_LIGNE.shp', { mode: 'no-cors',})
+                                .then(response => response.arrayBuffer())
+                                .then(buffer => shapefile.open(buffer))
+                                .then(source => source.read()
+                                    .then(function log(result) {
+                                        if (result.done) return;
+                                        L.geoJSON(result.value, {
+                                            onEachFeature: function (feature, layer) {
+                                                layer.bindPopup(`<b>Feature Name:</b> ${feature.properties.NAME}`);
+                                            }
+                                        }).addTo(map);
+                                        return source.read().then(log);
+                                    })
+                                )
+                                .catch(err => console.error('Error loading shapefile:', err));
+                                */
 
-                            streetMap.addTo(map);
+
+
+                            localTileLayer.addTo(map);
+                            //streetMap.addTo(map);
 
 
                             L.control.layers({
-                                'Street Map': streetMap,
-                                'Satellite Map': satelliteMap,
+                                /*'Street Map': streetMap,
+                                'Satellite Map': satelliteMap,*/
+                                'Offline Map': localTileLayer
                             }).addTo(map);
-
-
 
                             const uniteIcon = L.icon({
                                 iconUrl: '/assets/img/unite.png',
