--- a/src/main/resources/templates/article-new.html
+++ b/src/main/resources/templates/article-new.html
@@ -116,12 +116,6 @@
                                 </div>
                             </div>
 
-                            <div class="row mb-3" style="display:none;">
-                                <label for="caracteristiques" class="col-sm-2 col-form-label">Caractéristiques :</label>
-                                <div class="col-sm-10">
-                                    <textarea th:field="*{caracteristiques}" class="form-control" style="height: 100px;"></textarea>
-                                </div>
-                            </div>
 
                             <div class="row mb-3">
                                 <label for="observation" class="col-sm-2 col-form-label">Observation :</label>
@@ -130,6 +124,12 @@
                                 </div>
                             </div>
 
+                            <div class="row mb-3">
+                                <label for="caracteristiques" class="col-sm-2 col-form-label">Caractéristiques :</label>
+                                <div class="col-sm-10">
+                                    <textarea th:field="*{caracteristiques}" class="form-control" style="height: 100px;"></textarea>
+                                </div>
+                            </div>
 
                             <div id="quantityField" class="row mb-3" style="display:none;">
                                 <label for="quantity" class="col-sm-2 col-form-label">Quantité:</label>
