--- a/src/main/resources/templates/shared/sidebar.html
+++ b/src/main/resources/templates/shared/sidebar.html
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/article/liste" th:classappend="${#request.requestURI == '/article/enpanne'} ? 'active'">
+                        <a href="/article/enpanne" th:classappend="${#request.requestURI == '/article/enpanne'} ? 'active'">
                             <i class="bi bi-circle"></i><span>Liste Articles En Panne</span>
                         </a>
                     </li>
