--- a/src/main/resources/templates/article-list.html
+++ b/src/main/resources/templates/article-list.html
@@ -123,7 +123,7 @@
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                             <li><a class="dropdown-item" th:href="@{/article/{id}/mouvements(id=${stock.id})}">Mouvements</a></li>
                                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#editModal"
-                                                   th:attr="data-id=${stock.id}, data-designation=${stock.designation}, data-type=${stock.type.id}">Modifier</a></li>
+                                                   th:attr="data-id=${stock.id}, data-designation=${stock.designation}, data-carac=${stock.caracteristiques}, data-type=${stock.type.id}">Modifier</a></li>
                                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#deleteModal"
                                                    th:attr="data-id=${stock.id}, data-designation=${stock.designation}">Supprimer</a></li>
                                             <li th:if="${stock.type.libelle == 'PC BUREAU' or stock.type.libelle == 'PC PORTABLE'}">
@@ -162,6 +162,10 @@
                                                 <select class="form-select" id="type" name="typeId" required>
                                                     <option th:each="type : ${types}" th:value="${type.id}" th:text="${type.libelle}"></option>
                                                 </select>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="carac" class="form-label">Caractéristiques</label>
+                                                <input type="text" class="form-control" id="carac" name="carac" required>
                                             </div>
 
                                             <div class="modal-footer">
@@ -273,7 +277,6 @@
 <script src="/assets/vendor/tinymce/tinymce.min.js"></script>
 <script src="/assets/vendor/php-email-form/validate.js"></script>
 
-<!-- Template Main JS File -->
 <script src="/assets/js/main.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
@@ -295,10 +298,12 @@
             const button = event.relatedTarget;
             const stockId = button.getAttribute('data-id');
             const designation = button.getAttribute('data-designation');
+            const carac = button.getAttribute('data-carac');
             const typeId = button.getAttribute('data-type');
 
             document.getElementById('stockId').value = stockId;
             document.getElementById('designation').value = designation;
+            document.getElementById('carac').value = carac;
             document.getElementById('type').value = typeId;
         });
     });
