--- a/src/main/resources/templates/vsat-map.html
+++ b/src/main/resources/templates/vsat-map.html
@@ -70,12 +70,12 @@
 
                             const map = L.map('map').setView([33, -3], 6);
 
-                            /*const streetMap = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                            const streetMap = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
                                 maxZoom: 18,
                                 attribution: '© OpenStreetMap contributors',
                             });
 
-                            const satelliteMap = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+                            /*const satelliteMap = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
                                 attribution: 'Tiles © Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community',
                                 maxZoom: 20,
                             });*/
@@ -108,12 +108,12 @@
 
 
                             localTileLayer.addTo(map);
-                            //streetMap.addTo(map);
+                            streetMap.addTo(map);
 
 
                             L.control.layers({
-                                /*'Street Map': streetMap,
-                                'Satellite Map': satelliteMap,*/
+                                'Street Map': streetMap,
+                                /*'Satellite Map': satelliteMap,*/
                                 'Offline Map': localTileLayer
                             }).addTo(map);
 
